--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,19 +14,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyCountryApp"
         tools:targetApi="31">
-        <activity
-            android:name=".CountryDetailsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".CountryListActivity"
-            android:exported="true">
+
+        <activity android:name=".CountryDetailsActivity" android:exported="false" />
+        <activity android:name=".CountryListActivity" android:exported="true" />
+        <activity android:name=".HomeActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".AddCountryActivity"
-            android:exported="true" />
+        <activity android:name=".GameActivity" android:exported="true" />
+
     </application>
 </manifest>
