--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,11 +63,15 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.6.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
 
+
     // Room dependencies
     def room_version = "2.5.2"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+
+    implementation 'org.osmdroid:osmdroid-android:6.1.10'
+    implementation 'org.osmdroid:osmdroid-mapsforge:6.1.10'
 
     // Testing libraries
     testImplementation 'junit:junit:4.13.2'
